--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -227,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Text Data Controlelr for Language Model: `TextDataLMController`\n",
+    "### Text Data Controller for Language Model: `TextDataLMController`\n",
     "\n",
     "Similarly to `TextDatController`, `TextDataLMController` also provide a list of processings (except for **Label Processing**, **Upsampling** and **Text Augmentation**). The controller also allow tokenization line-by-line or by token concatenation. \n",
     "Visit the tutorial [here](https://anhquan0412.github.io/that-nlp-library/text_main_lm.html)\n",
